--- a/store_manager/requirements.txt
+++ b/store_manager/requirements.txt
@@ -6,6 +6,7 @@ asgiref==3.8.1
 attrs==24.2.0
 certifi==2024.8.30
 charset-normalizer==3.3.2
+coverage==7.6.4
 Django==5.1.1
 frozenlist==1.4.1
 gunicorn==23.0.0
